# garbage-in-garbage-out

./: LICENSE  docker-compose.yml
gigo_ingestion/: README.md  main.py  pyproject.toml
gigo_ingestion/src/: config.py  indexer.py  parser.py  schemas.py  utils.py
gigo_ingestion/src/db/: __init__.py  collection.py  manager.py
gigo_ingestion/src/metadata_extractors/: __init__.py  base.py  page_context_extractor.py  table_extractor.py  text_extractor.py
gigo_ingestion/src/processors/: __init__.py  base.py  image.py  question_mapping.py  table.py  text_blocks.py
gigo_ingestion/src/prompts/: __init__.py  context_metadata.py  image_interpretation.py  table_flattening.py  table_metadata.py
gigo_retrieval/: README.md  main.py  pyproject.toml
gigo_retrieval/src/: config.py  llm.py  schemas.py  services.py
gigo_retrieval/src/db/: collection.py
gigo_retrieval/src/prompts/: answer_question.py  query_decomposition.py
gigo_retrieval/src/references/: __init__.py  extractor.py  models.py
gigo_retrieval/src/references/extractors/: __init__.py  base.py  content_elements.py  content_summary.py  flattened_tables.py  table_metadata.py  within_page_relations.py
gigo_retrieval/src/strategies/: __init__.py  base.py  colbert.py  fusion.py  hybrid.py  matrioska.py
