[project]
name = "gigo-ingestion"
version = "0.1.0"
description = "Document ingestion pipeline for PDF processing with rich metadata extraction and vector database indexing"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "docling>=2.0.0",
    "docling-core>=2.0.0",
    "pymupdf>=1.24.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "qdrant-client>=1.10.0",
    "fastembed>=0.3.0",
    "litellm>=1.40.0",
    "openai>=1.35.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "ruff>=0.5.0",
    "mypy>=1.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
