[project]
name = "gigo-retrieval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastembed>=0.7.3",
    "litellm>=1.79.3",
    "openai>=2.7.2",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "qdrant-client>=1.15.1",
]
